tests/typechecker/should_pass/overload_builtins_prefix.csp
channel c : {0..1}

P(x) = c?union:{0} -> P(x+union)
