tests/typechecker/should_fail/type_annotations_9.csp
f :: (d) -> d
f(0) = 0